<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="run"
            type="mick.studio.itsfuntorun.models.RunModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.run.RunFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_run_kms"
                    android:inputType="numberDecimal"
                    android:backgroundTint="@color/black"
                    app:helperText="Enter in numeric format">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/runKms"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--this is the material design outlined EditText with helper text-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/calories_burned"
                    android:backgroundTint="@color/black"
                    app:helperText="Enter in numeric format">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/runCalories"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/hint_run_time"
                    android:backgroundTint="@color/black"
                    app:helperText="Enter in numeric format">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/runTime"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>
<!--                <Button-->
<!--                    android:id="@+id/chooseImage"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="16dp"-->
<!--                    android:background="@color/deep_blue"-->
<!--                    android:paddingBottom="8dp"-->
<!--                    android:paddingTop="8dp"-->
<!--                    android:text="@string/button_addImage"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="16sp"/>-->

                <ImageView
                    android:id="@+id/runImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@drawable/baseline_photo_camera_24" />


                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="#64DD17"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addRun"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
